kustomization/base/traefik-man/middleware.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-to-https-middleware
spec:
  redirectScheme:
    scheme: https
    permanent: true
